--- a/Rmarkdown/August2023/scRNA_integration_bytype_bycelltypeN.Rmd
+++ b/Rmarkdown/August2023/scRNA_integration_bytype_bycelltypeN.Rmd
@@ -31,23 +31,14 @@ source('../R/azimuth_analysis.R')
 source('../R/infercnv.R')
 ```
 
+
 # Loading data  
 ```{r loading,message  = T, fig.width = 11, fig.height=8,echo=T}  
-seurat.objects =readRDS(file.path(params$datapath,"adeno.24samples_27_07_23.rds"))
+#seurat.objects =readRDS(file.path(params$datapath,"adeno.24samples_27_07_23cnv.rds"))
 filenames =  list.files(params$datapath,pattern = '-C[ST]T-',full.names = F)
 
-metadata = data.frame()
-cells = NULL
-for(i in seq_along(filenames))
-{
-  if(i>1) colnames(metadata) = colnames(seurat.objects[[i]]@meta.data) 
-  metadata = rbind(metadata,seurat.objects[[i]]@meta.data)
-  cells[i] = median(seurat.objects[[i]]@meta.data$nFeature_RNA)
-}
-
-metadata$unique = paste(metadata$method,metadata$type,metadata$patient,sep = '___')
-
-nb_cells_per_sample = as.data.frame(table(metadata$unique),stringsAsFactors = F)
+metadata = read.csv(file.path(params$datapath,"adeno.24samples_metadata.csv"),row.names = 1)
+metadata = relabeler(metadata)
 ```
 
 
@@ -59,35 +50,39 @@ for(i in 1:2){
   if(i == 1) samples = c(1:length(filenames))[regexpr('CST-...._all_',filenames)>0]
   if(i == 2) samples = c(1:length(filenames))[regexpr('CST-...._SN_',filenames)>0]
  
-  features <- SelectIntegrationFeatures(object.list = seurat.objects[samples], nfeatures = 2000)
-  seurat.objects.method <- PrepSCTIntegration(object.list = seurat.objects[samples], anchor.features = features)
-  adeno.anchors <- FindIntegrationAnchors(object.list = seurat.objects.method, normalization.method = "SCT", anchor.features = features)
-  combined_permethod[[i]] <- IntegrateData(anchorset = adeno.anchors, normalization.method = "SCT")
+  combined_permethod[[i]] = merge(seurat.objects[[samples[1]]],seurat.objects[samples[-1]],merge.dr = 'proj.umap')
+  
+  #features <- SelectIntegrationFeatures(object.list = seurat.objects[samples], nfeatures = 2000)
+  #seurat.objects.method <- PrepSCTIntegration(object.list = seurat.objects[samples], anchor.features = features)
+  #adeno.anchors <- FindIntegrationAnchors(object.list = seurat.objects.method, normalization.method = "SCT", anchor.features = features)
+  #combined_permethod[[i]] <- IntegrateData(anchorset = adeno.anchors, normalization.method = "SCT")
   
   #annotation
-  azimuth_out  = azimuth_annotation(combined_permethod[[i]],annotation_threshold = 0.5,v2=T)
-  combined_permethod[[i]] = azimuth_out[[3]]
+  #azimuth_out  = azimuth_annotation(combined_permethod[[i]],annotation_threshold = 0.5,v2=T)
+  #combined_permethod[[i]] = azimuth_out[[3]]
   
   
   #infercnv
-  infercnv_out = infercnv_wrapper(seurat_obj = combined_permethod[[i]],
-                            quantile = 0.5, 
-                            out.dir = file.path(params$datapath,'infercnv/24samples/',ifelse(i==1,'Normal_cell','Normal_nucleus')),
-                            level = 'predicted.ann_level_1',
-                            gene_order_file = file.path(params$datapath,'gencode.v43.primary_assembly.annotation.positional'))
+  #infercnv_out = infercnv_wrapper(seurat_obj = combined_permethod[[i]],
+  #                          quantile = 0.5, 
+  #                          out.dir = file.path(params$datapath,'infercnv/24samples/',ifelse(i==1,'Normal_cell','Normal_nucleus')),
+  #                          level = 'predicted.ann_level_1',
+  #                          gene_order_file = file.path(params$datapath,'gencode.v43.primary_assembly.annotation.positional'))
   
-  combined_permethod[[i]] = infercnv_out[[1]]
-  
+  #combined_permethod[[i]] = infercnv_out[[1]]
+  print(paste0('Done ',i,' --- Time is: ', Sys.time()))
 }
 saveRDS(combined_permethod,file.path(params$datapath,"combined_permethod_pertypeN24.rds"))
 } else combined_permethod = readRDS(file.path(params$datapath,'combined_permethod_pertypeN24.rds'))
+
+combined_permethod = relabeler(combined_permethod)
+
 ```
 
 
 # 'SingleCells','SingleNuclei' NORMAL subset epit & Immune
 ```{r per method, cell cell type normal tissue}
-if(file.exists(file.path(params$datapath,'combined_permethod_percelltypeNd24.rds')) == F){
-npc=30
+if(file.exists(file.path(params$datapath,'combined_permethod_percelltypeN24.rds')) == F){
 type = c('Normal')
 cell_type = c('Epithelial','Immune')
 combined_permethod_percelltype = list(list(),list())
@@ -116,7 +111,46 @@ combined_permethod_percelltype = list(list(),list())
 
 saveRDS(combined_permethod_percelltype,file.path(params$datapath,"combined_permethod_percelltypeN24.rds"))
 } else combined_permethod_percelltype = readRDS(file.path(params$datapath,'combined_permethod_percelltypeN24.rds'))
+
+
+combined_permethod_percelltype = relabeler(combined_permethod_percelltype)
+
 ```
+
+
+```{r FETs}
+#Fisher Exact Test unknowns epithelials  (level 3)
+cell_imm =  table(combined_permethod_percelltype[[2]][[1]]@meta.data$predicted.ann_level_3)
+nuc_imm  =  table(combined_permethod_percelltype[[2]][[2]]@meta.data$predicted.ann_level_3)
+
+fisher.test(rbind(c(cell_imm[names(cell_imm) == 'others'],sum(cell_imm[names(cell_imm) != 'others'])),c(nuc_imm[names(nuc_imm) == 'Unclassified'],sum(nuc_imm[names(nuc_imm) != 'Unclassified']))))
+
+#FET  unknowns in general (level 1)
+cell =  table(combined_permethod[[1]]@meta.data$predicted.ann_level_1)
+nuc =  table(combined_permethod[[2]]@meta.data$predicted.ann_level_1)
+fisher.test(rbind(c(cell[names(cell) == 'Unclassified'],sum(cell[names(cell) != 'Unclassified'])),c(nuc[names(nuc) == 'Unclassified'],sum(nuc[names(nuc) != 'Unclassified']))))
+
+
+#FET epi similar cell types:
+cell_epi =  metadata[metadata$type=='Normal',] 
+cell_epi =  cell_epi[cell_epi$method=='Cell',]
+cell_epi =  cell_epi[cell_epi$predicted.ann_level_1=='Epithelial',]
+cell_epi = table(cell_epi$predicted.ann_level_3)
+
+
+nuc_epi =  metadata[metadata$type=='Normal',] 
+nuc_epi =  nuc_epi[nuc_epi$method=='Nucleus',]
+nuc_epi =  nuc_epi[nuc_epi$predicted.ann_level_1=='Epithelial',]
+nuc_epi = table(nuc_epi$predicted.ann_level_3)
+
+
+fisher.test(rbind(c(cell_epi[names(cell_epi) == 'Unclassified'],sum(cell_epi[names(cell_epi) != 'Unclassified'])),c(nuc_epi[names(nuc_epi) == 'Unclassified'],sum(nuc_epi[names(nuc_epi) != 'Unclassified']))))
+
+
+
+
+```
+
 
 # 'SingleCells','SingleNuclei' NORMAL subset epit & ImmunePLOTS
 ```{r UMAPplots}
@@ -140,13 +174,13 @@ for(i in 1:2){
   data_summarised = combined_permethod_percelltype[[c]][[i]]@meta.data %>% 
       group_by(predicted.ann_level_3,patient) %>%
       summarise(n = length(predicted.ann_level_1),.groups='keep')
-  
+
   empty_catego = all_colors_type$all_types
   data_summarised = data_summarised %>% bind_rows(data.frame(predicted.ann_level_3= empty_catego,patient = rep('P1000',length(empty_catego)),n =rep(0,length(empty_catego)) ))#}
   color_vector = all_colors_type$all_colors[all_colors_type$all_types %in% unique(data_summarised$predicted.ann_level_3)]
 
 barplots[[(i*2)+c-2]] = ggplot(data=data_summarised, aes(x='', y=n,fill=predicted.ann_level_3)) +
-    geom_bar(stat="identity")+scale_fill_manual( ifelse(c==1,'Cell Types ~ Epithelial','Cell Types ~ Immune'),values= color_vector) + ylab('Total Number of Cells')+theme_classic() + xlab('')+theme(axis.title = element_text(size = 8),legend.position = ifelse(i ==1,"none",'right'))
+    geom_bar(stat="identity")+scale_fill_manual( ifelse(c==1,'Cell Types (level3) ~ Epithelial','Cell Types (level3) ~ Immune'),values= color_vector) + ylab('Total Number of Cells')+theme_classic() + xlab('')+theme(axis.title = element_text(size = 8),legend.position = ifelse(i ==1,"none",'right'))
 
 }}
 
@@ -163,7 +197,7 @@ for(i in 1:2){
       summarise(n = length(predicted.ann_level_1),.groups='keep')
 
 barplots_general[[i]] = ggplot(data=data_summarised, aes(x='', y=n,fill=predicted.ann_level_1)) +
-    geom_bar(stat="identity")+scale_fill_manual('Cell Types  ~ level1',values=c(RColorBrewer::brewer.pal(n = 5, name = "Set1")))+theme_classic()+theme(axis.title = element_text(size = 8),legend.position = ifelse(i ==1,"none",'right')) +ylab('Total Number of cells') + xlab('') 
+    geom_bar(stat="identity")+scale_fill_manual('Cell Types (level1)',values=c(RColorBrewer::brewer.pal(n = 5, name = "Set1")))+theme_classic()+theme(axis.title = element_text(size = 8),legend.position = ifelse(i ==1,"none",'right')) +ylab('Total Number of cells') + xlab('') 
 }
 
 
@@ -179,15 +213,25 @@ table(metadata$method[metadata$predicted.ann_level_1=='Epithelial' & metadata$ty
 plot_UMAPS = list()
 
 ###plots
-  plot_SC=DimPlot(combined_permethod[[1]], reduction = "proj.umap", group.by = "predicted.ann_level_1",cols = brewer.pal(n = 5, name = "Set1"),pt.size=0.2) + ggtitle('Cells') + guides(shape='none') +theme(legend.position = "none",axis.title = element_text(size = 8),axis.text =element_text(size = 8) )#+ 
+  plot_SC=DimPlot(combined_permethod[[1]], reduction = "proj.umap", group.by = "predicted.ann_level_1",cols = brewer.pal(n = 5, name = "Set1"),pt.size=0.2) + ggtitle('Cell') + guides(shape='none') +
+    theme(legend.position = "none",axis.title = element_text(size = 8),axis.text =element_text(size = 8),
+          axis.ticks.x = element_blank(),
+          axis.ticks.y = element_blank(),
+          axis.text.x = element_blank(),
+          axis.text.y = element_blank())
+  #+ 
  #    geom_text(data=seurat_clusters[[1]], aes(x=UMAP_1,y=UMAP_2,label= seurat_clusters))
   
-   plot_SC$labels$colour = 'Cell types ~ level1' 
+   plot_SC$labels$colour = 'Cell types (level1)' 
    
    
-  plot_SN=DimPlot(combined_permethod[[2]], reduction = "proj.umap", group.by = "predicted.ann_level_1",cols = brewer.pal(n = 5, name = "Set1"),pt.size=0.2) + ggtitle('Nuclei') + guides(shape='none') +theme(legend.position = "none",axis.title = element_text(size = 8),axis.text =element_text(size = 8)) #+ 
+  plot_SN=DimPlot(combined_permethod[[2]], reduction = "proj.umap", group.by = "predicted.ann_level_1",cols = brewer.pal(n = 5, name = "Set1"),pt.size=0.2) + ggtitle('Nucleus') + guides(shape='none') +theme(legend.position = "none",axis.title = element_text(size = 8),axis.text =element_text(size = 8),
+          axis.ticks.x = element_blank(),
+          axis.ticks.y = element_blank(),
+          axis.text.x = element_blank(),
+          axis.text.y = element_blank()) #+ 
 #     geom_text(data=seurat_clusters[[2]], aes(x=UMAP_1,y=UMAP_2,label= seurat_clusters))
-  plot_SN$labels$colour = 'Cell types ~ level1'  
+  plot_SN$labels$colour = 'Cell types (level1)'  
 
   
 ###plots
@@ -209,16 +253,20 @@ for(i in 1:2){
   
   color_vector = all_colors_type$all_colors[all_colors_type$all_types %in% unique(data_summarised$predicted.ann_level_3)]
  
-  title = paste0(ifelse(i==1,'Cells','Nuclei'),ifelse(c==1,' ~ Epithelial',' ~ Immune'))
+  title = paste0(ifelse(i==1,'Cell','Nucleus'),ifelse(c==1,' ~ Epithelial',' ~ Immune'))
   #
-  plot_UMAPS[[(i*2)+c-2]] = DimPlot(combined_permethod_percelltype[[c]][[i]], reduction = "proj.umap", cols = color_vector,group.by = "predicted.ann_level_3",pt.size=0.2) + ggtitle(title) + guides(shape='none') + theme(legend.text=element_text(size=7),legend.position='none',axis.title = element_text(size = 8),axis.text =element_text(size = 8))
+  plot_UMAPS[[(i*2)+c-2]] = DimPlot(combined_permethod_percelltype[[c]][[i]], reduction = "proj.umap", cols = color_vector,group.by = "predicted.ann_level_3",pt.size=0.2) + ggtitle(title) + guides(shape='none') + theme(legend.text=element_text(size=7),legend.position='none',axis.title = element_text(size = 8),axis.text =element_text(size = 8),
+          axis.ticks.x = element_blank(),
+          axis.ticks.y = element_blank(),
+          axis.text.x = element_blank(),
+          axis.text.y = element_blank())
   #plot_UMAPS[[(i*2)+c-2]]$labels$colour = ifelse(c==1,'Epithelial','Immune') 
 }}
  
   
-  pdf(file.path(params$datapath,'../results/Figures_August2023/Fig3_UMAPs_CTA_normal24.pdf'),width = 12,height = 7) 
+  pdf(file.path(params$datapath,'../results/Figures_Oct2023/Fig3_UMAPs_CTA_normal24.pdf'),width = 12,height = 10.5) 
  (plot_SC + barplots_general[[1]] + plot_SN + barplots_general[[2]] + plot_layout(widths = c(10,1,10,1))) / 
- (plot_UMAPS[[2]] + barplots[[2]] + plot_UMAPS[[4]] + (barplots[[4]]+guides(fill=guide_legend(ncol=2))) + plot_layout(widths = c(10,1,10,1)))  / (plot_UMAPS[[1]] + barplots[[1]] + plot_UMAPS[[3]] + barplots[[3]] + plot_layout(widths = c(10,1,10,1))) + plot_annotation(tag_levels = list(c('A','','B','','C','','D','','E','','F','')))
+ (plot_UMAPS[[2]] + barplots[[2]] + plot_UMAPS[[4]] + (barplots[[4]] + guides(fill=guide_legend(ncol=2))) + plot_layout(widths = c(10,1,10,1)))  / (plot_UMAPS[[1]] + barplots[[1]] + plot_UMAPS[[3]] + (barplots[[3]] + guides(fill=guide_legend(ncol=2))) +plot_layout(widths = c(10,1,10,1))) + plot_annotation(tag_levels = list(c('A','','B','','C','','D','','E','','F','')))
   dev.off()
 ```
 
@@ -229,77 +277,122 @@ sc_sn_plots = list()
 for(i in 1:2){
 metadata_simplified = combined_permethod[[i]]@meta.data
 
-data_summarised = combined_permethod[[i]]@meta.data %>% 
-  group_by(predicted.ann_finest_level,patient,predicted.ann_level_1) %>%
-  summarise(n = length(predicted.ann_finest_level),sum = sum(nFeature_RNA),cnv_sum = sum(cnv_score),.groups='keep')
+metadata_simplified$patient[metadata_simplified$patient == 4] = 1
+metadata_simplified$patient[metadata_simplified$patient == 6] = 2
+metadata_simplified$patient[metadata_simplified$patient == 8] = 3
+metadata_simplified$patient[metadata_simplified$patient == 10] = 4
+
+#none == unknown
+metadata_simplified$predicted.ann_level_3[metadata_simplified$predicted.ann_level_3=='None'] = 'Unclassified'
+
+#filter rare celltypes
+celltypes = as.matrix(table(metadata_simplified$predicted.ann_level_3,metadata_simplified$predicted.ann_level_1))
+
+flush = 0
+for(c in 1:ncol(celltypes))
+{
+  rare = rownames(celltypes)[celltypes[,c]<20]
+  #filter 
+  if(c != ncol(celltypes)) {temp = c(1:nrow(metadata_simplified))[(metadata_simplified$predicted.ann_level_3 %in% rare) & metadata_simplified$predicted.ann_level_1 == colnames(celltypes)[c]]}
+  if(c == ncol(celltypes)) {temp = c(1:nrow(metadata_simplified))[(metadata_simplified$predicted.ann_level_3 == 'Unclassified') & metadata_simplified$predicted.ann_level_1 == colnames(celltypes)[c]]}
+  flush = c(temp,flush)
+}
+
+
+metadata_simplified = metadata_simplified[-flush,]
+
+
+#shorten names
+metadata_simplified$predicted.ann_level_3[metadata_simplified$predicted.ann_level_3=='Lymphatic EC differentiating'] = 'Lymph. EC diff.'
+metadata_simplified$predicted.ann_level_3[metadata_simplified$predicted.ann_level_3=='Lymphatic EC mature'] = 'Lymph. EC matu.'
+metadata_simplified$predicted.ann_level_3[metadata_simplified$predicted.ann_level_3=='Multiciliated lineage'] = 'Multicil. lineage' 
+metadata_simplified$predicted.ann_level_3[metadata_simplified$predicted.ann_level_3=='Innate lymphoid cell NK'] = 'lymphoid cell NK' 
+
+
+#summarise
+data_summarised = metadata_simplified %>% 
+  group_by(predicted.ann_level_3,patient,predicted.ann_level_1) %>%
+  summarise(n = length(predicted.ann_level_3),sum = sum(nFeature_RNA),cnv_sum = sum(cnv_score),.groups='keep')
 
 data_summarised$n_fraction = 0
 data_summarised$nFeature_RNA_mean = 0
 data_summarised$cnv_mean = 0
 unique_patients = unique(data_summarised$patient)
 
+
 #keep best labels
-for(u in unique(data_summarised$predicted.ann_finest_level)){  
-  temp = data_summarised[data_summarised$predicted.ann_finest_level==u,] 
+for(u in unique(data_summarised$predicted.ann_level_3)){  
+  temp = data_summarised[data_summarised$predicted.ann_level_3==u,] 
  
   for(p in seq_along(unique_patients)){
-  
-  temp$n_fraction[temp$patient==unique_patients[p]] = sum(temp$n[temp$patient==unique_patients[p]])/sum(temp$n)
+    #this is necessary for the special cases of unknowns which happen in different cell types...
+    for(lev1 in c('Immune','Epithelial','Endothelial','Stroma','Unclassified')){ 
+      temp$n_fraction[temp$patient==unique_patients[p] & temp$predicted.ann_level_1 == lev1] = sum(temp$n[temp$patient==unique_patients[p] & temp$predicted.ann_level_1 == lev1]) / sum(temp$n[temp$predicted.ann_level_1==lev1])
 
-  temp$nFeature_RNA_mean[temp$patient==unique_patients[p]] = sum(temp$sum[temp$patient==unique_patients[p]])/sum(temp$n[temp$patient==unique_patients[p]])
+      temp$nFeature_RNA_mean[temp$patient==unique_patients[p] & temp$predicted.ann_level_1 == lev1] = sum(temp$sum[temp$patient==unique_patients[p] & temp$predicted.ann_level_1 == lev1])/sum(temp$n[temp$patient==unique_patients[p] & temp$predicted.ann_level_1 == lev1])
  
-  temp$cnv_mean[temp$patient==unique_patients[p]] = sum(temp$cnv_sum[temp$patient==unique_patients[p]])/sum(temp$n[temp$patient==unique_patients[p]])
+      temp$cnv_mean[temp$patient==unique_patients[p] & temp$predicted.ann_level_1 == lev1] = sum(temp$cnv_sum[temp$patient==unique_patients[p] & temp$predicted.ann_level_1 == lev1])/sum(temp$n[temp$patient==unique_patients[p] & temp$predicted.ann_level_1 == lev1])
+    }
   }
-  
-  data_summarised[data_summarised$predicted.ann_finest_level ==u,] = temp
-
+  data_summarised[data_summarised$predicted.ann_level_3 ==u,] = temp
 }
 
-data_summarised$predicted.ann_level_1 = factor(data_summarised$predicted.ann_level_1,level = c('Immune','Epithelial','Endothelial','Stroma','unknown'))
+data_summarised$predicted.ann_level_1 = factor(data_summarised$predicted.ann_level_1,level = c('Immune','Epithelial','Endothelial','Stroma','Unclassified'))
 
-data_summarised$patient = factor(data_summarised$patient,level = c(4,6,8,10))
+data_summarised$patient = factor(data_summarised$patient,level = c(1,2,3,4))
 
-metadata_simplified$predicted.ann_level_1 = factor(metadata_simplified$predicted.ann_level_1,level = c('Immune','Epithelial','Endothelial','Stroma','unknown'))
+metadata_simplified$predicted.ann_level_1 = factor(metadata_simplified$predicted.ann_level_1,level = c('Immune','Epithelial','Endothelial','Stroma','Unclassified'))
 
 #plots
-fraction_per_patient = ggplot(data_summarised, aes(n_fraction,predicted.ann_finest_level,fill = patient)) + 
-  geom_col() +
+fraction_per_patient = ggplot(data_summarised, aes(n_fraction,predicted.ann_level_3,fill = patient)) + 
+  geom_col(position = position_fill(reverse = TRUE)) +
     facet_grid(predicted.ann_level_1 ~ ., scales = "free", space = "free",switch = 'y') +
-  ylab('clusters') +
+  scale_fill_discrete(type= c(RColorBrewer::brewer.pal(n = 4, name = "Accent"))[4:1]) +
+  ylab(paste0('Cell types',ifelse(i==1,' (Cell dataset)',' (Nucleus dataset)'))) +
   xlab('Fraction of cells') +
   theme_bw() + theme(legend.position = ifelse(i==1,'none','bottom'),axis.title.x= list(element_blank(),element_text())[[i]])
 
-number_of_cells = ggplot(data_summarised, aes(n,predicted.ann_finest_level ,fill = patient)) +
-    geom_col() +
+number_of_cells = ggplot(data_summarised, aes(n,predicted.ann_level_3 ,fill = patient)) +
+    geom_col(position = position_stack(reverse = TRUE)) +
+    scale_x_continuous(limits = c(0,ifelse(i==1,12601,6300))) +
     facet_grid(predicted.ann_level_1 ~ ., scales = "free", space = "free",switch = 'y') +
+  scale_fill_discrete(type= c(RColorBrewer::brewer.pal(n = 4, name = "Accent")[4:1])) +
   ylab('clusters') +
   xlab('Number of cells') +
-   theme_bw() + theme(legend.position = 'none',strip.background = element_blank(),
+   theme_bw() + theme(legend.position = 'none',strip.background = element_blank(),axis.text.y=element_blank(),
   strip.text.y = element_blank(),axis.title.y=element_blank(),axis.title.x= list(element_blank(),element_text())[[i]])
 
 
 #data_summarised_UMI = data_summarised[data_summarised$patient=='P4',]
-number_of_UMI = ggplot(metadata_simplified, aes(nCount_RNA,predicted.ann_finest_level )) + geom_boxplot(fill = "lightblue") + scale_x_continuous(trans= 'log10',breaks = c(500,1500,5000,15000,50000), label = c(500,1500,5000,15000,50000)) +
+number_of_UMI = ggplot(metadata_simplified, aes(nCount_RNA,predicted.ann_level_3)) + geom_boxplot(fill = "deeppink") + scale_x_continuous(trans= 'log10',breaks = c(500,1500,5000,15000,50000), label = c(500,1500,5000,15000,50000)) +
     facet_grid(predicted.ann_level_1 ~ ., scales = "free", space = "free",switch = 'y') +
   ylab('clusters') +
-  xlab('Number of UMIs per cell') +
-   theme_bw() + theme(legend.position = 'none',strip.background = element_blank(),
+  xlab('Number of UMIs per cell\n(log scale)') +
+   theme_bw() + theme(legend.position = 'none',strip.background = element_blank(),axis.text.y=element_blank(),
   strip.text.y = element_blank(),axis.title.y=element_blank(),axis.title.x= list(element_blank(),element_text())[[i]])
 
+number_of_genes = ggplot(metadata_simplified, aes(nFeature_RNA,predicted.ann_level_3)) + geom_boxplot(fill = "deeppink") +
+    facet_grid(predicted.ann_level_1 ~ ., scales = "free", space = "free",switch = 'y') +
+  ylab('clusters') +
+  xlab('Number of genes per cell') +
+   theme_bw() + theme(legend.position = 'none',strip.background = element_blank(),axis.text.y=element_blank(),
+  strip.text.y = element_blank(),axis.title.y=element_blank(),axis.title.x= list(element_blank(),element_text())[[i]])
+
+
 #CNV 
-cnvMean = ggplot(metadata_simplified, aes(cnv_score,predicted.ann_finest_level)) + geom_boxplot(fill = "orange") + scale_x_continuous(trans= 'log10',breaks = c(0.0001,0.001,0.01), label = c(0.0001,0.001,0.01),limits = c(0.00004,0.02)) +
+cnvMean = ggplot(metadata_simplified, aes(cnv_score,predicted.ann_level_3)) + geom_boxplot(fill = "aquamarine") + scale_x_continuous(trans= 'log10',breaks = c(0.0001,0.001,0.01), label = c(0.0001,0.001,0.01),limits = c(0.00004,0.02)) +
     facet_grid(predicted.ann_level_1 ~ ., scales = "free", space = "free",switch = 'y') +
     ylab('clusters') +
-    xlab('CNV score') +
-    theme_bw() + theme(legend.position = 'none',strip.background = element_blank(),
+    xlab('CNV score (log scale)') +
+    theme_bw() + theme(legend.position = 'none',strip.background = element_blank(),axis.text.y=element_blank(),
                        strip.text.y = element_blank(),axis.title.y=element_blank(),axis.title.x= list(element_blank(),element_text())[[i]])
 
 
 
-  sc_sn_plots[[i]] = fraction_per_patient|number_of_cells|number_of_UMI
+  sc_sn_plots[[i]] = fraction_per_patient|number_of_cells|number_of_genes
 }
 
-pdf(file.path(params$datapath,'../results/Figures_August2023/Fig3_barplots_lambrechtsN24.pdf'),width = 14,height = 12) 
+pdf(file.path(params$datapath,'../results/Figures_Oct2023/Fig4_barplots_lambrechtsN24.pdf'),width = 11,height = 12) 
 (sc_sn_plots[[1]]/sc_sn_plots[[2]] ) + plot_annotation(tag_levels = 'A')
 dev.off()
 ```
